--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luis Xhamani - Photographe & Vidéaste</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="hero">
-    <div class="overlay">
-      <h1>Luis Xhamani</h1>
-      <p>Photographe & Vidéaste</p>
-      <a href="pages/portfolio.html" class="btn">Voir mon portfolio</a>
-    </div>
-  </header>
+    <header>
+        <h1>Bienvenue sur mon site !</h1>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="pages/about.html">À propos</a>
+            <a href="pages/contact.html">Contact</a>
+        </nav>
+    </header>
 
-  <section class="intro">
-    <h2>Bienvenue</h2>
-    <p>Je capture vos plus beaux moments à travers la photo et la vidéo. Mariages, événements, portraits et plus encore.</p>
-  </section>
+    <main>
+        <section>
+            <h2>Présentation</h2>
+            <p>Ceci est un exemple de site web que vous pouvez personnaliser.</p>
+            <img src="images/exemple.jpg" alt="Exemple d'image">
+        </section>
+    </main>
 
-  <footer>
-    <p>© 2024 Luis Xhamani | <a href="pages/contact.html">Me contacter</a></p>
-  </footer>
+    <footer>
+        <p>© 2025 Mon Site. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
